--- a/views/add.hbs
+++ b/views/add.hbs
@@ -14,7 +14,7 @@
   </div>
 
   <div class="input-field">
-    <input id="img" name="url" type="text" class="validate" required>
+    <input id="img" name="img" type="text" class="validate" required>
     <label for="img">URL image</label>
     <span class="helper-text" data-error="Write the url image"></span>
   </div>
