--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -1,6 +1,6 @@
 <h1>Edit {{course.title}}</h1>
 
-<form action="/courses/edit" method="POST">
+<form action="/courses/edit" class="course-form" method="POST">
   <div class="input-field">
     <input value="{{course.title}}" id="title" name="title" type="text" class="validate" required>
     <label for="title">Course title</label>
@@ -20,5 +20,10 @@
   </div>
 
   <input type="hidden" name="id" value="{{course.id}}">
-  <button class="btn btn-primary">Edit course</button>
+  <button type="submit" class="btn btn-primary">Edit course</button>
+</form>
+
+<form action="/courses/remove" method="POST">
+  <input type="hidden" name="id" value="{{ course.id }}">
+  <button class="btn red">Delete course</button>
 </form>
