--- a/views/card.hbs
+++ b/views/card.hbs
@@ -25,6 +25,10 @@
     </table>
 
     <p><strong>Price: </strong><span class="price">{{price}}</span></p>
+
+    <form action="/orders" method="POST">
+      <button type="submit" class="btn">Order</button>
+    </form>
   {{else}}
     <p>Card is empty</p>
   {{/if}}
