NJ-10 added route protection, password encryption

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -46,6 +46,12 @@
           <span class="helper-text" data-error="Write password"></span>
         </div>
 
+        <div class="input-field">
+          <input id="name" name="name" type="text" class="validate" required>
+          <label for="name">Your name</label>
+          <span class="helper-text" data-error="Write name"></span>
+        </div>
+
         <button class="btn btn-primary" type="submit">Registration</button>
       </form>
     </div>
