--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,20 +1,24 @@
 <h1>Add new course</h1>
 
-<form action="/add" method="POST">
+{{#if error}}
+  <p class="alert">{{error}}</p>
+{{/if}}
+
+<form action="/add" method="POST" novalidate>
   <div class="input-field">
-    <input id="title" name="title" type="text" class="validate" required>
+    <input id="title" name="title" type="text" class="validate" required value="{{data.title}}">
     <label for="title">Course title</label>
     <span class="helper-text" data-error="Write title"></span>
   </div>
 
   <div class="input-field">
-    <input id="price" name="price" type="text" class="validate" required min="1">
+    <input id="price" name="price" type="text" class="validate" required min="1" value="{{data.price}}">
     <label for="price">Price</label>
     <span class="helper-text" data-error="Write price"></span>
   </div>
 
   <div class="input-field">
-    <input id="img" name="img" type="text" class="validate" required>
+    <input id="img" name="img" type="text" class="validate" required value="{{data.img}}">
     <label for="img">URL image</label>
     <span class="helper-text" data-error="Write the url image"></span>
   </div>
